Add check Windows Hello and get Windows TPM version

--- a/TPMEncryptor/TPMEncryptor.vcxproj
+++ b/TPMEncryptor/TPMEncryptor.vcxproj
@@ -128,6 +128,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -267,12 +268,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="MemoryDeallocation.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SecureDescrService.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TMPEncryptorHelper.h" />
     <ClInclude Include="TPMEncryptor.h" />
     <ClInclude Include="TPMEncryptorDlg.h" />
+    <ClInclude Include="UserAuth.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -283,9 +287,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SecureDescrService.cpp" />
     <ClCompile Include="TMPEncryptorHelper.cpp" />
     <ClCompile Include="TPMEncryptor.cpp" />
     <ClCompile Include="TPMEncryptorDlg.cpp" />
+    <ClCompile Include="UserAuth.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TPMEncryptor.rc" />
