Research Windows Hello

--- a/TPMEncryptor/TPMEncryptor.vcxproj.filters
+++ b/TPMEncryptor/TPMEncryptor.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="UserAuth.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StringConverter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TPMEncryptor.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UserAuth.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StringConverter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
