--- a/TPMEncryptor/TPMEncryptor.vcxproj
+++ b/TPMEncryptor/TPMEncryptor.vcxproj
@@ -272,6 +272,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SecureDescrService.h" />
+    <ClInclude Include="StringConverter.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TMPEncryptorHelper.h" />
     <ClInclude Include="TPMEncryptor.h" />
@@ -288,6 +289,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="SecureDescrService.cpp" />
+    <ClCompile Include="StringConverter.cpp" />
     <ClCompile Include="TMPEncryptorHelper.cpp" />
     <ClCompile Include="TPMEncryptor.cpp" />
     <ClCompile Include="TPMEncryptorDlg.cpp" />
