--- a/TPMEncryptor/TPMEncryptor.vcxproj.filters
+++ b/TPMEncryptor/TPMEncryptor.vcxproj.filters
@@ -42,10 +42,22 @@
     <ClInclude Include="MemoryDeallocation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UserAuth.h">
+    <ClInclude Include="WinHello.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StringConverter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WinRTErrorExtension.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SecureService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WinRTUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="KeyHandleWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -65,10 +77,16 @@
     <ClCompile Include="SecureDescrService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UserAuth.cpp">
+    <ClCompile Include="WinHello.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StringConverter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SecureService.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WinRTUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
